istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-rest-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-sample-rest-service
spec:
  hosts:
  - "*"
  gateways:
  - sample-rest-service-gateway
  http:
  - match:
    - uri:
        exact: /sampleservice
    - uri:
        exact: /sampletimeservice
    route:
    - destination:
        host: sample-rest-service
        port:
          number: 8080
